--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -85,14 +85,14 @@
                 <h4 class="col-10 text-pwhite text-capitalize mb-82px kabel-demi pt-55">proyectos</h4>
             </div>
             <div class="row parallax-section">
-                <article class="col-6 parallax-article bg-img-antitusa d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-antitusa d-flex justify-content-center align-items-center to-blur proj-art-1">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Serie - Tips Antitusa</h3>
                         </a>
                     </div>
                 </article>
-                <article class="col-6 parallax-article bg-img-restos d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-restos d-flex justify-content-center align-items-center to-blur proj-art-2">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#">
                             <p class="text-center text-pwhite text-uppercase grouch shdw spc pt-18">coming soon</p>
@@ -103,14 +103,14 @@
                 </article>
             </div>
             <div class="row parallax-section">
-                <article class="col-6 parallax-article bg-img-opening d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-opening d-flex justify-content-center align-items-center to-blur proj-art-3">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Opening Concierto</h3>
                         </a>
                     </div>
                 </article>
-                <article class="col-6 parallax-article bg-img-fumo d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-fumo d-flex justify-content-center align-items-center to-blur proj-art-4">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#fumo-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - Fumo y Bebo</h3>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="row parallax-section">
-                <article class="col-6 parallax-article bg-img-transmi d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-transmi d-flex justify-content-center align-items-center to-blur proj-art-5">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#transmi-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22"><p>Transmilenials - Piloto</p>Coproductores</h3>
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-6 parallax-article bg-img-pipe d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-pipe d-flex justify-content-center align-items-center to-blur proj-art-6">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Concierto 15 años Pipe Bueno</h3>
@@ -175,7 +175,7 @@
                 </article>
             </div>
             <div class="row parallax-section">
-                <article class="col-6 parallax-article bg-img-tarde d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-tarde d-flex justify-content-center align-items-center to-blur proj-art-7">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#tarde-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - Volviste Tarde</h3>
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-6 parallax-article bg-img-fuera d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-fuera d-flex justify-content-center align-items-center to-blur proj-art-8">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#fuera-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Podcast - Fuera de Set</h3>
@@ -241,7 +241,7 @@
                 </div>
             </div>
             <div class="row parallax-section">
-                <article class="col-6 parallax-article bg-img-misteriosa d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-misteriosa d-flex justify-content-center align-items-center to-blur proj-art-9">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#misteriosa-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Misteriosa - Piloto Coproductores</h3>
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-6 parallax-article bg-img-nono d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-nono d-flex justify-content-center align-items-center to-blur proj-art-10">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#no-no-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - No me digas que no</h3>
@@ -297,7 +297,7 @@
                 </div>
             </div>
             <div class="row parallax-section">
-                <article class="col-6 parallax-article bg-img-cantina d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-cantina d-flex justify-content-center align-items-center to-blur proj-art-11">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#cantina-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - La Cantina</h3>
@@ -327,7 +327,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-6 parallax-article bg-img-casa d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-casa d-flex justify-content-center align-items-center to-blur proj-art-12">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22"><p>Cápsulas - La Casa del</p>Diseño Colombiano</h3>
@@ -336,14 +336,14 @@
                 </article>
             </div>
             <div class="row parallax-section">
-                <article class="col-6 parallax-article bg-img-movistar d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-movistar d-flex justify-content-center align-items-center to-blur proj-art-13">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Concierto Movistar Arena</h3>
                         </a>
                     </div>
                 </article>
-                <article class="col-6 parallax-article bg-img-off d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-off d-flex justify-content-center align-items-center to-blur proj-art-14">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <p class="text-center text-pwhite text-uppercase grouch shdw spc pt-18">coming soon</p>
@@ -461,7 +461,7 @@
                                             <p class="text-pwhite text-justfy popps-r pt-18">María Delgado, una apasionada incansable que imprime su esencia en cada proyecto que desarrolla. Siempre en busca de nuevos horizontes, su sed de exploración la convierte en una observadora meticulosa, capturando la esencia de cada momento para tejer magia en favor de sus proyectos.</p>
                                             <p class="text-pwhite text-justfy popps-r pt-18">Estudió Comunicación Audiovisual en la Universidad de la Sabana, María dió sus primeros pasos en la industria en Fox telecolombia (actualmente TIS), donde forjó su camino a la asistencia de dirección. Con más de 15 años de experiencia y con su talento ha dejado huella en escenarios como Colombia y México. Su experiencia abarca grandes productoras como Alazraki Films, Dynamo, Perro Azul, Caracol, Media Pro, CMO, Proyectil, Puracé Pictures, Sony Pictures, Fidelio Films, TIS.</p>
                                             <p class="text-pwhite text-justfy popps-r pt-18">Actualmente, María está en el desarrollo de una película de ficción como productora y el desarrollo de un proyecto cultural para Colombia. Al mismo tiempo María es directora de proyectos de la Fundación Héroesde Colombia ONG, donde su aporte es clave para el desarrollo y la ayuda de madres e hijos de está.</p>
-                                            <p class="text-pwhite text-end popps-r pt-18"><a href="https://www.imdb.com/name/nm7515371/?ref_=ext_shr_lnk">Ver más  <img class="imdb-logo" src="/img/fotos version 1900x--/fotos Equipo seccion 4/logo IMDb.svg" alt="imdb logo"></a></p>
+                                            <p class="text-pwhite text-end popps-r pt-18"><a href="https://www.imdb.com/name/nm7515371/?ref_=ext_shr_lnk" target="_blank">Ver más  <img class="imdb-logo" src="/img/fotos version 1900x--/fotos Equipo seccion 4/logo IMDb.svg" alt="imdb logo"></a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -493,7 +493,7 @@
                                             <p class="text-pwhite text-justfy popps-r pt-18">Juan Tobón, un visionario de la producción audiovisual con una trayectoria vasta y diversa. Su creatividad desbordante y mentalidad positiva dan forma a un portafolio enriquecido, capaz de adaptarse a cualquier escenario. Con una visión clara, transforma ideas en producciones cinematográficas, series y proyectos institucionales.</p>
                                             <p class="text-pwhite text-justfy popps-r pt-18">Con más de 20 años inmerso en la industria del cine y la televisión, ha cultivado su talento en escenarios tan diversos como Colombia y República Dominicana. Su pericia ha dejado huella en reconocidas productoras como Caracol, Media Pro, 64 A Films, Dynamo, Teleset, CMO Producciones, Proyectil y MovieBox Producciones.</p>
                                             <p class="text-pwhite text-justfy popps-r pt-18">En la actualidad, Juan se encuentra inmerso en la producción de unas cápsulas digitales de cine titulado “Cabecimotor”, al tiempo que desarrolla su ópera prima como productor en una película de ficción.</p>
-                                            <p class="text-pwhite text-end popps-r pt-18"><a href="https://www.imdb.com/name/nm8008446/?ref_=ext_shr_lnk">Ver más  <img class="imdb-logo" src="/img/fotos version 1900x--/fotos Equipo seccion 4/logo IMDb.svg" alt="imdb logo"></a></p>
+                                            <p class="text-pwhite text-end popps-r pt-18"><a href="https://www.imdb.com/name/nm8008446/?ref_=ext_shr_lnk" target="_blank">Ver más  <img class="imdb-logo" src="/img/fotos version 1900x--/fotos Equipo seccion 4/logo IMDb.svg" alt="imdb logo"></a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -524,7 +524,7 @@
                                             <p class="text-pwhite text-justfy popps-r pt-18">Realizador Audiovisual egresado de la Escuela de Cine Lumière, durante su trayectoria se ha desempeñado como Director, guionista y primer asistente de dirección de diversas obras cinematográficas reconocidas a nivel nacional e internacional.</p>
                                             <p class="text-pwhite text-justfy popps-r pt-18">Como director, desarrolla la película Volar. Como guionista, en las películas Perros (2017) Todas para uno (2014), De Rolling 2: Por el sueño mundialista (2014), De Rolling por Colombia (2013) y asesor de guión de la pelicula El Arriero (2009). Director de unidades adicionales de la serie Historia de un crimen: </p>
                                             <p class="text-pwhite text-justfy popps-r pt-18">Caso Colmenares (2019) y como Director asistente en las series Hasta que la plata nos separe (2022), Perfil Falso (2023), Pa´ Quererte (2020) y Paraiso Travel (2018). Como primer asistente de dirección participa en los proyectos Cien Años de Soledad (2022 – 2023) El olvido que seremos (2020) Distrito Salvaje (2018) Amalia la secretaria (2017), Corazón de León (2015) entre otras.</p>
-                                            <p class="text-pwhite text-end popps-r pt-18"><a href="https://www.imdb.com/name/nm5779094/?ref_=ext_shr_lnk">Ver más  <img class="imdb-logo" src="/img/fotos version 1900x--/fotos Equipo seccion 4/logo IMDb.svg" alt="imdb logo"></a></p>
+                                            <p class="text-pwhite text-end popps-r pt-18"><a href="https://www.imdb.com/name/nm5779094/?ref_=ext_shr_lnk" target="_blank">Ver más  <img class="imdb-logo" src="/img/fotos version 1900x--/fotos Equipo seccion 4/logo IMDb.svg" alt="imdb logo"></a></p>
                                         </div>
                                     </div>
                                 </div>
