--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -283,4 +283,10 @@
       font-size: 0.8em;
     }
 
+    /* --------- Modals ---------*/
+
+    .modal-wrapper, .modal-content, .modal-header, .modal-body {
+      width: 87vw !important;
+  }
+
   }
